--- a/PFATeam/CMakeLists.txt
+++ b/PFATeam/CMakeLists.txt
@@ -3,4 +3,4 @@ project(PFAProject)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(PFAProject main.cpp)
+add_executable(PFAProject main.cpp tester.cpp)
