--- a/PFATeam/CMakeLists.txt
+++ b/PFATeam/CMakeLists.txt
@@ -3,4 +3,10 @@ project(PFAProject)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(PFAProject main.cpp tester.cpp)
+find_package(Boost 1.70)
+include_directories(${CMAKE_SOURCE_DIR})
+if(Boost_FOUND)
+    set(Boost_INCLUDE_DIRS ${Boost_INCLUDE_DIRS})
+    set(Boost_LIBRARIES ${Boost_LIBRARIES})
+endif()
+add_executable(PFAProject main.cpp tester.cpp writer/writer.cpp writer/writer.h)
