--- a/PFATeam/CMakeLists.txt
+++ b/PFATeam/CMakeLists.txt
@@ -9,6 +9,6 @@ if(Boost_FOUND)
     set(Boost_INCLUDE_DIRS ${Boost_INCLUDE_DIRS})
     set(Boost_LIBRARIES ${Boost_LIBRARIES})
 endif()
-add_executable(PFAProject main.cpp tester.cpp writer/writer.cpp writer/writer.h memory/cmemory.h memory/MemoryProfiler.cpp memory/MemoryProfiler.h memory/ProfilableAllocator.h graph/parallel_graph.h graph/sequential_split.h)
-add_executable(PFAProjectParallel parallel_main.cpp tester.cpp writer/writer.cpp writer/writer.h memory/cmemory.h memory/MemoryProfiler.cpp memory/MemoryProfiler.h memory/ProfilableAllocator.h graph/parallel_graph.h)
+add_executable(PFAProject main.cpp tester.cpp writer/writer.cpp writer/writer.h memory/cmemory.h memory/MemoryProfiler.cpp memory/MemoryProfiler.h memory/ProfilableAllocator.h graph/parallel_graph.h graph/graphsplit.h graph/splitcreator.h graph/splitmerger.h)
+add_executable(PFAProjectParallel parallel_main.cpp tester.cpp writer/writer.cpp writer/writer.h memory/cmemory.h memory/MemoryProfiler.cpp memory/MemoryProfiler.h memory/ProfilableAllocator.h graph/parallel_graph.h graph/splitcreator.h graph/splitmerger.h)
 
