--- a/PFATeam/CMakeLists.txt
+++ b/PFATeam/CMakeLists.txt
@@ -3,12 +3,13 @@ project(PFAProject)
 
 set(CMAKE_CXX_STANDARD 20)
 
-find_package(Boost 1.70)
+find_package(Boost 1.70 COMPONENTS program_options)
 include_directories(${CMAKE_SOURCE_DIR})
+include_directories(${Boost_INCLUDE_DIRS})
 if(Boost_FOUND)
     set(Boost_INCLUDE_DIRS ${Boost_INCLUDE_DIRS})
     set(Boost_LIBRARIES ${Boost_LIBRARIES})
 endif()
 add_executable(PFAProject main.cpp tester.cpp writer/writer.cpp writer/writer.h memory/cmemory.h memory/MemoryProfiler.cpp memory/MemoryProfiler.h memory/ProfilableAllocator.h graph/parallel_graph.h graph/graphsplit.h graph/splitcreator.h graph/splitmerger.h)
 add_executable(PFAProjectParallel parallel_main.cpp tester.cpp writer/writer.cpp writer/writer.h memory/cmemory.h memory/MemoryProfiler.cpp memory/MemoryProfiler.h memory/ProfilableAllocator.h graph/parallel_graph.h graph/splitcreator.h graph/splitmerger.h)
-
+target_link_libraries(PFAProjectParallel ${Boost_LIBRARIES})
