--- a/PFATeam/test.cfg
+++ b/PFATeam/test.cfg
@@ -1,19 +1,20 @@
 #mode can be "discard", "resume", or "auto"
 mode=discard
-tests-per-implementation=1
+tests-per-implementation=3
 test-types=one
-graphs-folder=datasets/sample
+graphs-folder=datasets/test
 #write_json=yes
 [human-output]
 enable=yes
 #path=PFATeam/human-output.txt
 [csv]
 enable=yes
-path=test2.csv
+path=hi2.tsv
 separator=\t
 [json]
-enable=yes
-path=test2.json
+enable=no
+path=test.json
+finalize=yes
 [profile]
 enable=no
 interval=200ms
