commit before last pull

--- a/PFATeam/test.cfg
+++ b/PFATeam/test.cfg
@@ -1,19 +1,19 @@
 #mode can be "discard", "resume", or "auto"
-mode=discard
-tests-per-implementation=1
+mode=resume
+tests-per-implementation=10
 test-types=one
-graphs-folder=datasets/sample
+graphs-folder=/home/user/Code/datasets
 #write_json=yes
 [human-output]
 enable=yes
 #path=PFATeam/human-output.txt
 [csv]
 enable=yes
-path=test2.csv
+path=parallel_results_4.csv
 separator=\t
 [json]
 enable=yes
-path=test2.json
+path=parallel.json
 [profile]
 enable=no
 interval=200ms
@@ -26,6 +26,6 @@ enable=no
 [parallel]
 enable=yes
 deferred-threads=no
-splits=2 4 8 12 16
+splits=2 4 6 8 12 16 20
 inplace=yes
 filename-suffix=#
