commit before last pull

--- a/PFATeam/test.cfg
+++ b/PFATeam/test.cfg
@@ -1,5 +1,5 @@
 #mode can be "discard", "resume", or "auto"
-mode=discard
+mode=resume
 tests-per-implementation=10
 test-types=one
 graphs-folder=/home/user/Code/datasets
@@ -9,33 +9,23 @@ enable=yes
 #path=PFATeam/human-output.txt
 [csv]
 enable=yes
-path=/home/user/Graph_creation/PFATeam/results/200622.csv
+path=parallel_results_4.csv
 separator=\t
 [json]
 enable=yes
-path=/home/user/Graph_creation/PFATeam/results/200622.json
-finalize=yes
+path=parallel.json
 [profile]
-enable=yes
-memory=Exterior
+enable=no
 interval=200ms
-path=/home/user/Graph_creation/PFATeam/results/200622.profile
+path=test.profile
 
 #Sequential Configuration File
 [sequential]
 enable=no
 #Parallel Configuration File
 [parallel]
-enable=no
-deferred-threads=no
-splits=2 4 8 12 16
-inplace=yes
-filename-suffix=#
-[edge_centric]
-enable=no
-[edge_centric_parallel]
 enable=yes
 deferred-threads=no
-splits=2 4 8 12 16
+splits=2 4 6 8 12 16 20
 inplace=yes
 filename-suffix=#
