few changes after pfa

--- a/PFATeam/test.cfg
+++ b/PFATeam/test.cfg
@@ -1,31 +1,31 @@
 #mode can be "discard", "resume", or "auto"
 mode=discard
-tests-per-implementation=3
+tests-per-implementation=10
 test-types=one
-graphs-folder=datasets/test
+graphs-folder=/home/user/Code/datasets
 #write_json=yes
 [human-output]
 enable=yes
 #path=PFATeam/human-output.txt
 [csv]
 enable=yes
-path=hi2.tsv
+path=/home/user/Graph_creation/PFATeam/results/170622.csv
 separator=\t
 [json]
-enable=no
-path=test.json
+enable=yes
+path=/home/user/Graph_creation/PFATeam/results/170622.json
 finalize=yes
 [profile]
-enable=no
+enable=yes
 interval=200ms
-path=test.profile
+path=/home/user/Graph_creation/PFATeam/results/170622.profile
 
 #Sequential Configuration File
 [sequential]
-enable=no
+enable=yes
 #Parallel Configuration File
 [parallel]
-enable=yes
+enable=no
 deferred-threads=no
 splits=2 4 8 12 16
 inplace=yes
