few changes after pfa

--- a/PFATeam/test.cfg
+++ b/PFATeam/test.cfg
@@ -1,5 +1,5 @@
 #mode can be "discard", "resume", or "auto"
-mode=resume
+mode=discard
 tests-per-implementation=10
 test-types=one
 graphs-folder=/home/user/Code/datasets
@@ -9,23 +9,24 @@ enable=yes
 #path=PFATeam/human-output.txt
 [csv]
 enable=yes
-path=parallel_results_4.csv
+path=/home/user/Graph_creation/PFATeam/results/170622.csv
 separator=\t
 [json]
 enable=yes
-path=parallel.json
+path=/home/user/Graph_creation/PFATeam/results/170622.json
+finalize=yes
 [profile]
-enable=no
+enable=yes
 interval=200ms
-path=test.profile
+path=/home/user/Graph_creation/PFATeam/results/170622.profile
 
 #Sequential Configuration File
 [sequential]
-enable=no
+enable=yes
 #Parallel Configuration File
 [parallel]
-enable=yes
+enable=no
 deferred-threads=no
-splits=2 4 6 8 12 16 20
+splits=2 4 8 12 16
 inplace=yes
 filename-suffix=#
