--- a/PFATeam/test.cfg
+++ b/PFATeam/test.cfg
@@ -1,30 +1,39 @@
 #mode can be "discard", "resume", or "auto"
 mode=discard
-tests-per-implementation=3
+tests-per-implementation=10
 test-types=one
-graphs-folder=datasets/test
+graphs-folder=/home/user/Code/datasets
 #write_json=yes
 [human-output]
 enable=yes
 #path=PFATeam/human-output.txt
 [csv]
 enable=yes
-path=hi2.tsv
+path=/home/user/Graph_creation/PFATeam/results/200622.csv
 separator=\t
 [json]
-enable=no
-path=test.json
+enable=yes
+path=/home/user/Graph_creation/PFATeam/results/200622.json
 finalize=yes
 [profile]
-enable=no
+enable=yes
+memory=Exterior
 interval=200ms
-path=test.profile
+path=/home/user/Graph_creation/PFATeam/results/200622.profile
 
 #Sequential Configuration File
 [sequential]
 enable=no
 #Parallel Configuration File
 [parallel]
+enable=no
+deferred-threads=no
+splits=2 4 8 12 16
+inplace=yes
+filename-suffix=#
+[edge_centric]
+enable=no
+[edge_centric_parallel]
 enable=yes
 deferred-threads=no
 splits=2 4 8 12 16
