edge centric sequential and parallel added

--- a/PFATeam/test.cfg
+++ b/PFATeam/test.cfg
@@ -9,23 +9,32 @@ enable=yes
 #path=PFATeam/human-output.txt
 [csv]
 enable=yes
-path=/home/user/Graph_creation/PFATeam/results/170622.csv
+path=/home/user/Graph_creation/PFATeam/results/200622.csv
 separator=\t
 [json]
 enable=yes
-path=/home/user/Graph_creation/PFATeam/results/170622.json
+path=/home/user/Graph_creation/PFATeam/results/200622.json
 finalize=yes
 [profile]
 enable=yes
+memory=Exterior
 interval=200ms
-path=/home/user/Graph_creation/PFATeam/results/170622.profile
+path=/home/user/Graph_creation/PFATeam/results/200622.profile
 
 #Sequential Configuration File
 [sequential]
-enable=yes
+enable=no
 #Parallel Configuration File
 [parallel]
 enable=no
+deferred-threads=no
+splits=2 4 8 12 16
+inplace=yes
+filename-suffix=#
+[edge_centric]
+enable=no
+[edge_centric_parallel]
+enable=yes
 deferred-threads=no
 splits=2 4 8 12 16
 inplace=yes
